<resources>
    <!--AndroidManifest strings-->
    <string name="title_activity_studio_list">Studio List</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_user_home_screen">Account</string>
    <string name="app_name">OpenStudio</string>

    <!--AddStudioActivity strings-->
    <string name="add_studio_success">Studio added successfully</string>
    <string name="add_studio_fail">Failed to add new studio</string>
    <string name="convert_studio_fail">Failed to convert address to coordinates</string>

    <!--FindStudioActivity strings-->
    <string name="on_connection_failed">Unable to connect to Google Maps</string>
    <string name="on_connection_suspended">Connection to Google Maps stopped</string>

    <!--LoginActivity strings-->
    <string name="complete_all_fields">Please complete all fields</string>
    <string name="unable_to_login">Unable to login</string>

    <!--RegisterActivity strings-->
    <string name="register_success">User successfully registered</string>
    <string name="register_fail">Unable to register</string>

    <!--StudioListActivity strings-->
    <string name="get_studio_fail">Failed to get studios</string>

    <!--activity_add_studio.xml strings-->
    <string name="studio_name">Studio Name</string>
    <string name="add_studio">Add Studio</string>
    <string name="studio_text">Search studios</string>
    <string name="location_text">Search location</string>
    <string name="main_activity_button">Home</string>
    <string name="owner_name">Owner Name</string>
    <string name="type">Studio Type</string>
    <string name="address">Address</string>
    <string name="accessibility">Accessibility</string>
    <string name="description">Description</string>
    <string name="availability">Days and Times Available</string>
    <string name="contact_info">Email Address</string>

    <string-array name="studio_type_array">
        <item>Photography</item>
        <item>Textiles</item>
        <item>Sewing</item>
        <item>Painting</item>
        <item>Ceramics</item>
        <item>Sculpture</item>
    </string-array>

    <string-array name="accessibility_array">
        <item>Wheelchair accessible</item>
        <item>Low scent</item>
        <item>Gender neutral restrooms</item>
        <item>ASL interpreter</item>
        <item>N/A</item>
    </string-array>

    <string-array name="studio_search_array">
        <item>All</item>
        <item>Photography</item>
        <item>Textiles</item>
        <item>Sewing</item>
        <item>Painting</item>
        <item>Ceramics</item>
        <item>Sculpture</item>
    </string-array>

    <!--activity_detail_studio_strings-->
    <string name="more_photos">View more photos</string>
    <string name="studio_details">Studio Details</string>

    <!--activity_main.xml strings-->
    <string name="find_studio_test_button">Find Studios</string>
    <string name="find_workshops">Find Workshops</string>
    <string name="tools">Tools</string>

    <!--activity_login.xml-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!--menu_main.xml strings-->
    <string name="logout">Log Out</string>

    <!--user login/registration strings-->
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>

    <!--activity_user_home_screen.xml strings-->
    <string name="full_name">Full Name</string>
    <string name="btn_link_to_register">Not a user? Sign up here.</string>
    <string name="btn_link_to_login">Already registered? Login here.</string>
    <string name="welcome">Welcome to OpenStudio</string>
    <string name="btn_logout">LOGOUT</string>

    <!--bottom_nav_items.xml-->
    <string name="string_search_studios">Search</string>
    <string name="string_home">Home</string>
    <string name="string_account">Account</string>

    <!--activity_about.xml strings-->
    <string name="about_paragraph">
        Welcome to OpenStudio!
        \n\n
        This app allows you to search for art studios in your area!
        Our goal is accessibility for everyone, so we give you the option of
        viewing photos and features of a space.
        \n\n
        In the future you will be able to search for workspaces at accessible prices,
        and also buy, sell, and trade art supplies for a low cost.
        \n\n
        For any questions or concerns, contact
        \n
        Nadine, Syn, Regina, and Eve!
    </string>
</resources>
