<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:hint="@string/studio_name"/>
        <!--android:inputType="text"/>-->
        <EditText android:id="@+id/owner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:hint="@string/owner_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/type"/>
        <Spinner
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:entries="@array/studio_type_array"
            android:prompt="@string/type" />
        <EditText android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:hint="@string/address"
            android:layout_marginBottom="15dip"/>

        <EditText android:id="@+id/contactInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:inputType="textEmailAddress"
            android:hint="@string/contact_info"/>

        <EditText android:id="@+id/availability"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:hint="@string/availability"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:text="@string/accessibility"/>
        <Spinner
            android:id="@+id/accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:entries="@array/accessibility_array"
            android:prompt="@string/accessibility" />
        <EditText android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:minLines="4"
            android:maxLines="4"
            android:isScrollContainer="true"
            android:gravity="top"
            android:hint="@string/description"/>
        <Button android:id="@+id/add_studio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:textColor="@color/white"
            android:text="@string/add_studio"/>
    </LinearLayout>
</ScrollView>

